fixed overflow issue on skills list for cellphone screen size

--- a/my-app/public/styles.css
+++ b/my-app/public/styles.css
@@ -244,6 +244,10 @@ div .carousel-indicators {
 	justify-content: center;
 }
 
+.skills-list {
+  font-size: 15px;
+}
+
 /* ----------------- Footer ---------------- */
 
 /* part 3 of styling to keep footer at bottom of page */
